--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,12 +25,21 @@ jobs:
     steps:
       - uses: actions/checkout@v6
 
+      - name: Generate GitHub App token
+        id: app-token
+        uses: actions/create-github-app-token@v2
+        with:
+          app-id: ${{ vars.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+          owner: AllayMC
+          repositories: AllayHubIndex
+
       - name: Checkout AllayHubIndex
         uses: actions/checkout@v6
         with:
           repository: AllayMC/AllayHubIndex
           path: AllayHubIndex
-          token: ${{ secrets.REPO_TOKEN }}
+          token: ${{ steps.app-token.outputs.token }}
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
