--- a/indexer/Cargo.toml
+++ b/indexer/Cargo.toml
@@ -12,7 +12,9 @@ ureq = { version = "3.1.4", features = ["json"] }
 jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-toml = "0.8"
+postcard = { version = "1", features = ["alloc"] }
+flate2 = "1"
+toml = "0.9.8"
 tree-sitter = "0.26"
 tree-sitter-kotlin-ng = "1.1"
 tree-sitter-groovy = "0.1"
